--- a/frontEnd/app/src/main/res/layout/login.xml
+++ b/frontEnd/app/src/main/res/layout/login.xml
@@ -109,7 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="168dp"
+        android:layout_marginEnd="152dp"
         android:text="Don't have an account?"
         android:textColor="#9900F0"
         android:textSize="14sp"
@@ -120,11 +120,13 @@
         android:id="@+id/txt2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="224dp"
+        android:layout_marginStart="244dp"
         android:layout_marginTop="8dp"
+        android:onClick="signPage"
         android:text="@string/signUp"
         android:textColor="#9900F0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/logIn" />
+        app:layout_constraintTop_toBottomOf="@+id/logIn"
+        tools:ignore="TouchTargetSizeCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
