--- a/frontEnd/app/src/main/res/layout/courses.xml
+++ b/frontEnd/app/src/main/res/layout/courses.xml
@@ -35,4 +35,17 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.072" />
 
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/coursedGrid"
+        android:layout_width="fill_parent"
+        android:layout_height="510dp"
+        app:rowCount="4"
+        app:layout_constraintBottom_toTopOf="@+id/imageView4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.491">
+
+    </androidx.gridlayout.widget.GridLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
