--- a/frontEnd/app/src/main/res/layout/courses.xml
+++ b/frontEnd/app/src/main/res/layout/courses.xml
@@ -16,37 +16,61 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.948"
+        app:layout_constraintVertical_bias="0.961"
         app:srcCompat="@drawable/logoicon" />
 
     <TextView
         android:id="@+id/coursesTitle"
-        android:layout_width="220dp"
+        android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:background="@drawable/customtitle"
-        android:text="Current Courses"
+        android:text="Courses"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="28sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.072" />
+        app:layout_constraintVertical_bias="0.098" />
 
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/coursedGrid"
-        android:layout_width="fill_parent"
-        android:layout_height="510dp"
+        android:layout_width="411dp"
+        android:layout_height="452dp"
         app:columnCount="1"
-        app:rowCount="5"
         app:layout_constraintBottom_toTopOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/coursesTitle"
-        app:layout_constraintVertical_bias="0.491">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.62"
+        app:rowCount="5">
 
     </androidx.gridlayout.widget.GridLayout>
+
+    <Button
+        android:id="@+id/addCourse"
+        android:layout_width="wrap_content"
+        android:layout_height="57dp"
+        android:text="Add Course"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.835" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="51dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="180dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/courses" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
