Adding course description page

--- a/frontEnd/app/src/main/res/layout/profile.xml
+++ b/frontEnd/app/src/main/res/layout/profile.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".profileJava"
-    android:background="#4300B4D8">
+    android:background="#4300B4D8"
+    tools:context=".profileJava">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/imageView"
