--- a/frontEnd/app/src/main/res/values/themes.xml
+++ b/frontEnd/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.Egenda" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#9900F0</item>
+        <item name="colorPrimary">#C31AD2</item>
         <item name="colorPrimaryVariant">#9900F0</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
