--- a/frontEnd/app/src/main/res/layout/coursedesc.xml
+++ b/frontEnd/app/src/main/res/layout/coursedesc.xml
@@ -95,13 +95,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Comments:"
+        android:text="Category:"
         android:textColor="#000000"
         android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.077"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Comments:"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.078"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <EditText
         android:layout_width="110dp"
@@ -155,7 +168,22 @@
         android:layout_marginEnd="104dp"
         android:background="@drawable/customedit"
         android:inputType="textMultiLine"
-        android:lines="3"
+        android:lines="1"
+        android:maxLines="1"
+        android:minLines="1"
+        android:scrollbars="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+
+    <EditText
+        android:layout_width="110dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="452dp"
+        android:layout_marginEnd="104dp"
+        android:background="@drawable/customedit"
+        android:inputType="textMultiLine"
+        android:lines="1"
         android:maxLines="4"
         android:minLines="1"
         android:scrollbars="vertical"
