--- a/frontEnd/app/src/main/res/layout/hwtrack.xml
+++ b/frontEnd/app/src/main/res/layout/hwtrack.xml
@@ -61,12 +61,13 @@
         app:layout_constraintVertical_bias="0.245" />
 
     <androidx.gridlayout.widget.GridLayout
-        android:layout_width="354dp"
-        android:layout_height="415dp"
-        android:layout_marginTop="212dp"
-        android:layout_marginEnd="56dp"
+        android:layout_width="405dp"
+        android:layout_height="390dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.66">
 
     </androidx.gridlayout.widget.GridLayout>
 
