--- a/frontEnd/app/src/main/res/layout/login.xml
+++ b/frontEnd/app/src/main/res/layout/login.xml
@@ -82,6 +82,7 @@
         android:layout_height="46dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="52dp"
+        android:onClick="signPage"
         android:text="Login"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/password"
@@ -122,7 +123,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="244dp"
         android:layout_marginTop="8dp"
-        android:onClick="signPage"
+        android:onClick="signup"
         android:text="@string/signUp"
         android:textColor="#9900F0"
         app:layout_constraintStart_toStartOf="parent"
