--- a/frontEnd/app/src/main/res/layout/signup.xml
+++ b/frontEnd/app/src/main/res/layout/signup.xml
@@ -137,6 +137,7 @@
         android:id="@+id/register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="goBack"
         android:text="Sign Up"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/name"
